--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,8 +8,8 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipe of recipes"
-      [recipeItem]="(recipe)"
+      *ngFor="let recipeEl of recipes"
+      [recipeItem]="recipeEl"
     ></app-recipe-item>
   </div>
 </div>
