can add ingredients to list

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,7 +9,8 @@
   <div class="col-xs-12">
     <app-recipe-item
       *ngFor="let recipeEl of recipes"
-      [recipeItem]="recipeEl"
+      [recipe]="recipeEl"
+      (recipeItem)="gotRecipe(recipeEl)"
     ></app-recipe-item>
   </div>
 </div>
