--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,12 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (showRecipe)="showRecipe($event)"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail
+      *ngIf="recipeToShow != null; else infoText"
+      [recipe]="recipeToShow"
+    ></app-recipe-detail>
+    <ng-template #infoText><p>Please select a Recipe!</p></ng-template>
   </div>
 </div>
