--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,10 +17,12 @@
     >
       <ul class="nav navbar-nav">
         <li><a (click)="onSelect('recipe')" href="#">Recipes</a></li>
-        <li><a (click)="onSelect('shoppingList')"href="#">Shopping-list</a></li>
+        <li>
+          <a (click)="onSelect('shoppingList')" href="#">Shopping-list</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+        <li class="dropdown" appDropdown>
           <a href="#" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
