--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -26,8 +26,8 @@
             >Add Ingredients to Shopping List</a
           >
         </li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li style="cursor: pointer"><a>Edit Recipe</a></li>
+        <li style="cursor: pointer"><a>Delete Recipe</a></li>
       </ul>
     </div>
   </div>
