--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <p>{{ lastClicked }}</p>
-      <app-recipes *ngIf="lastClicked === 'recipe'"></app-recipes>
-      <app-shopping-list
-        *ngIf="lastClicked === 'shoppingList'"
-      ></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
