--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -26,7 +26,9 @@
             >Add Ingredients to Shopping List</a
           >
         </li>
-        <li style="cursor: pointer"><a>Edit Recipe</a></li>
+        <li style="cursor: pointer">
+          <a (click)="onEditRecipe()">Edit Recipe</a>
+        </li>
         <li style="cursor: pointer"><a>Delete Recipe</a></li>
       </ul>
     </div>
