--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -29,7 +29,9 @@
         <li style="cursor: pointer">
           <a (click)="onEditRecipe()">Edit Recipe</a>
         </li>
-        <li style="cursor: pointer"><a>Delete Recipe</a></li>
+        <li style="cursor: pointer" (click)="onDeleteRecipe()">
+          <a>Delete Recipe</a>
+        </li>
       </ul>
     </div>
   </div>
