--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,20 +17,35 @@
     >
       <ul class="nav navbar-nav">
         <li routerLinkActive="active">
-          <a routerLink="/recipes">Recipes</a>
+          <a routerLink="/auth" *ngIf="!isAuthenticated">Authenticate</a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/recipes" *ngIf="isAuthenticated">Recipes</a>
         </li>
         <li routerLinkActive="active">
           <a routerLink="/shopping-list">Shopping-list</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li>
+          <a
+            style="cursor: pointer"
+            (click)="onLogout()"
+            *ngIf="isAuthenticated"
+            >Logout</a
+          >
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li style="cursor: pointer"><a>Save Data</a></li>
-            <li style="cursor: pointer"><a>Fetching Data</a></li>
+            <li style="cursor: pointer" (click)="onSaveData()">
+              <a>Save Data</a>
+            </li>
+            <li style="cursor: pointer" (click)="onFetchData()">
+              <a>Fetch Data</a>
+            </li>
           </ul>
         </li>
       </ul>
