--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,50 +1,35 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button
-        type="button"
-        class="navbar-toggle"
-        (click)="collapsed = !collapsed"
-      >
-        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
-      </button>
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
-    <div
-      class="navbar-collapse"
-      [class.collapse]="collapsed"
-      (window:resize)="collapsed = true"
-    >
+
+    <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active">
-          <a routerLink="/auth" *ngIf="!isAuthenticated">Authenticate</a>
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
+          <a routerLink="/recipes">Recipes</a>
+        </li>
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a routerLink="/auth">Authenticate</a>
         </li>
         <li routerLinkActive="active">
-          <a routerLink="/recipes" *ngIf="isAuthenticated">Recipes</a>
-        </li>
-        <li routerLinkActive="active">
-          <a routerLink="/shopping-list">Shopping-list</a>
+          <a routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a
-            style="cursor: pointer"
-            (click)="onLogout()"
-            *ngIf="isAuthenticated"
-            >Logout</a
-          >
+        <li *ngIf="isAuthenticated">
+          <a style="cursor: pointer" (click)="onLogout()">Logout</a>
         </li>
         <li class="dropdown" appDropdown *ngIf="isAuthenticated">
-          <a class="dropdown-toggle" role="button"
+          <a style="cursor: pointer" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li style="cursor: pointer" (click)="onSaveData()">
-              <a>Save Data</a>
+            <li>
+              <a style="cursor: pointer" (click)="onSaveData()">Save Data</a>
             </li>
-            <li style="cursor: pointer" (click)="onFetchData()">
-              <a>Fetch Data</a>
+            <li>
+              <a style="cursor: pointer" (click)="onFetchData()">Fetch Data</a>
             </li>
           </ul>
         </li>
