--- a/src/app/shared/alert/alert.component.css
+++ b/src/app/shared/alert/alert.component.css
@@ -15,8 +15,8 @@
   width: 60vw;
   padding: 16px;
   z-index: 100;
-  background-color: white;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  background: white;
+  box-shadow: 0 2px 8px rbga(0, 0, 0, 0.26);
 }
 
 .alert-box-actions {
